Issue: Fix Search Btn Alignment - Mobile (#434)

--- a/packages/reference/client/scss/50_objects/_o-header.scss
+++ b/packages/reference/client/scss/50_objects/_o-header.scss
@@ -60,7 +60,7 @@
     @include breakpoint(desktop) {
       margin-top: 0;
       text-align: center;
-      width: 20%;
+      width: 25%;
     }
   }
 
