--- a/packages/reference/client/scss/60_components/_c-searchbar.scss
+++ b/packages/reference/client/scss/60_components/_c-searchbar.scss
@@ -15,7 +15,7 @@
     color: $text-dark;
     font-size: 1em;
     font-weight: 500;
-    height: 3.1rem;
+    height: 3.15rem;
     margin: auto;
     padding: 0 3%;
     width: 87%;
